--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -208,9 +208,9 @@ head
         .col-xs-12(style='text-align:center;')
           h1(id='newbooks' style='font-family:high;font-size:100px;font-weight:bold;color:white;padding-right:20px;') #{newbooks} 
             span(id='readbooks' style='color:rgba(0, 0, 0, 0.15);') | #{readbooks}
-      #showbooks.row
+      #booksrow.row
         #bookinsert.col-xs-12
-      #showmovies.row(style='display:none;')
+      #moviesrow.row(style='display:none;')
         #bookinsert.col-xs-12
     footer(class='footer')
       .container
