--- a/views/emptymindexreg.jade
+++ b/views/emptymindexreg.jade
@@ -209,7 +209,7 @@ head
                  span(class='glyphicon glyphicon-search') 
       a(href="http://m.peopleandbooks.com/settings") Настройки
       a(href='http://m.peopleandbooks.com/about') О проекте
-      a(href="/logout") Выйти
+      a(href="http://peopleandbooks.com/logout") Выйти
     .container( id='maincont' style='background-color:#52CA8F;overflow:auto;height:100%;padding-left:20px;padding-right:0px;padding-bottom:74px;')
       .row
         .col-xs-12(style='text-align:center;')
