--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -281,7 +281,23 @@ head
     script.
       var books = !{books};
       //var movies = !{movies};
-      books.forEach(function(element,index,array){$('#bookinsert').append("<h4 style='color:white;'>"+element.booktitle+"</h4>");});
+      books.forEach(function(element,index,array){
+       // $('#bookinsert').append("<h4 style='color:white;'>"+element.booktitle+"</h4>");
+        var popbookclass = 'yet';
+        var popinsert = "<h4 class='"+popbookclass+"'' style='color:white;'>"+element.booktitle;
+        if(newbook!=1)
+        {
+         bookclass='alreadyb';
+        }
+        if(element.star===1&&element.newbook===0){
+          popinsert+="<span style='color:#F2D45C;margin-left:10px;' class='glyphicon glyphicon-star'></span>";
+        }
+        if(element.attention===1&&element.newbook===1){
+          popinsert+="<span style='color:rgba(255, 255, 255, 0.65);margin-left:10px;' class='glyphicon glyphicon-exclamation-sign'></span>";
+        }
+        popinsert+="</h4>";
+        $('#bookinsert').prepend(insert);
+      });
       // CA5B52 for movies 99362F
       $('.addbookbutton').click(function(){
           if($('#showbooks').hasClass('activebutton'))
@@ -367,7 +383,7 @@ head
       else {
         $('#addbook').slideToggle();
       var bookclass = 'yet';
-      var insert = "<h4 class='"+bookclass+"'' style='color:white;'>"+booktitle+"</h4>";
+      var insert = "<h4 class='"+bookclass+"'' style='color:white;'>"+booktitle;
       if(newbook!='on')
       {
        bookclass='alreadyb'
@@ -378,6 +394,7 @@ head
       if(attention!='on'&&newbook==='on'){
         insert+="<span style='color:rgba(255, 255, 255, 0.65);margin-left:10px;' class='glyphicon glyphicon-exclamation-sign'></span>";
       }
+      insert+="</h4>";
       $(insert).prependTo('#bookinsert').hide().slideDown();
       allowsubmit=1;
       //window.location = 'http://m.peopleandbooks.com';
