--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -296,7 +296,7 @@ head
           popinsert+="<span style='color:rgba(255, 255, 255, 0.65);margin-left:10px;' class='glyphicon glyphicon-exclamation-sign'></span>";
         }
         popinsert+="</h4>";
-        $('#bookinsert').prepend(insert);
+        $('#bookinsert').prepend(popinsert);
       });
       // CA5B52 for movies 99362F
       $('.addbookbutton').click(function(){
