--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -385,6 +385,12 @@ head
         allowsubmit=1;
         }
         else {
+          $('#addbook').slideToggle();
+           $('#author').val('');
+        $('#booktitle').val('');
+        $("#checkbox").prop("newbook", false);
+        $("#checkbox").prop("star", false);
+        $("#checkbox").prop("attention", false);
         var bookclass = 'yet';
         var insert = "<h4 class='"+bookclass+"'' style='color:white;'>"+booktitle;
         if(newbook!='on')
