--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -382,6 +382,11 @@ head
       }
       else {
         $('#addbook').slideToggle();
+        $('#author').val('');
+        $('#booktitle').val('');
+        $("#checkbox").prop("newbook", false);
+        $("#checkbox").prop("star", false);
+        $("#checkbox").prop("attention", false);
       var bookclass = 'yet';
       var insert = "<h4 class='"+bookclass+"'' style='color:white;'>"+booktitle;
       if(newbook!='on')
