--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -351,9 +351,9 @@ head
       // BOOK SUBMIT FUNCTION
       var allowsubmit = 1;
       function valmonitor() {
-        console.log('newbook: '+$('#newbook').val());
-        console.log('star: '+$('#star').val());
-        console.log('attention: '+$('#attention').val());
+        console.log('newbook: '+$('#newbook').checked);
+        console.log('star: '+$('#star').checked);
+        console.log('attention: '+$('#attention').checked);
       }
       function booksubmit() {
       if(!allowsubmit) {
