--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -286,11 +286,11 @@ head
       books.forEach(function(element,index,array){
        // $('#bookinsert').append("<h4 style='color:white;'>"+element.booktitle+"</h4>");
         var popbookclass = 'yet';
-        var popinsert = "<h4 class='"+popbookclass+"'' style='color:white;'>"+element.booktitle;
         if(newbook!=1)
         {
-         bookclass='alreadyb';
+         popbookclass='alreadyb';
         }
+        var popinsert = "<h4 class='"+popbookclass+"'' style='color:white;'>"+element.booktitle;
         if(element.star===1&&element.newbook===0){
           popinsert+="<span style='color:#F2D45C;margin-left:10px;' class='glyphicon glyphicon-star'></span>";
         }
