--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -290,7 +290,7 @@ head
         {
          popbookclass='alreadyb';
         }
-        var popinsert = "<h4 class='"+popbookclass+"'' style='color:white;'>"+element.booktitle;
+        var popinsert = "<h4 class='"+popbookclass+"'>"+element.booktitle;
         if(element.star===1&&element.newbook===0){
           popinsert+="<span style='color:#F2D45C;margin-left:10px;' class='glyphicon glyphicon-star'></span>";
         }
