--- a/views/index.jade
+++ b/views/index.jade
@@ -170,7 +170,7 @@ head
       height:100%;
       background-image:url('/bootstrap/images/books.jpg');
       position:fixed;
-      background-color:#668176;
+      background-color:#A1D0C0;
       background-position:center;
       background-size: cover;
       background-repeat:no-repeat;
