--- a/views/mindex.jade
+++ b/views/mindex.jade
@@ -65,7 +65,7 @@ head
       height:100%;
       background-image:url('/bootstrap/images/books.jpg');
       position:fixed;
-      background-color:#668176;
+      background-color:#A1D0C0;
       background-position:center;
       background-size: cover;
       background-repeat:no-repeat;
@@ -163,28 +163,6 @@ head
         float: none !important; 
       }
   body
-    //nav(class='navbar navbar-fixed-top navbar-inverse')
-    //  .container
-    //    .navbar-header
-    //      button(type='button',class='navbar-toggle collapsed',data-toggle='collapse',data-target='#navbar',aria-expanded='false',aria-controls='navbar')
-    //        span.sr-only 
-    //          Toggle navigation
-    //        span.icon-bar
-    //        span.icon-bar
-    //        span.icon-bar
-    //      h2(class='navbar-brand',style='font-size8:8vw;margin-top:0px;margin-bottom:0px;') 
-    //        a(class='navar-brand') People&Books
-    //    #navbar.navbar-collapse.collapse(aria-expanded='false',style='height:1px;')
-    //      ul(class='nav navbar-nav')
-    //        li
-    //          a(href='/top') 
-    //            h1 Рейтинги
-    //        li
-    //          a(href='/search')  
-    //            h1 Опроекте
-    //        li 
-    //          a(href='/misc/1') 
-    //            h1 Контакты
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
       h3(style='text-align:center;color:orange;') People & Books
       a(href="#") Настройки
@@ -211,10 +189,6 @@ head
                   a(href="/register") Регистрация
     button(type='button' id='showLeft' style='color:white;font-size:30px;position:absolute;bottom:15px;right:15px;border:0px;background-color:transparent;') 
       span(class='glyphicon glyphicon-align-justify ')
-
-    
-      //
-        h5(id='more',style='color:black;margin-bottom:10px;cursor:pointer;') Еще 
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
     script(src='/js/bootstrap.min.js')
     script.
