--- a/views/index.jade
+++ b/views/index.jade
@@ -215,6 +215,7 @@ head
         .col-xs-4.col-xs-offset-4
           input(class='form-control' type='email' style='margin-bottom:5px;' id='vlgn' name='mail' placeholder='email')
           input(class='form-control' type='password' style='margin-bottom:20px;' id='vphr' name='p' placeholder='password')
+          input(class='form-control' type='password' style='margin-bottom:20px;display:none;' id='pc' name='p' placeholder='password confirmation')
           #wrap(style='width:100%;')
             button(class='btn btn-primary' type='button' id='shownav' style='position:absolute;margin-left:-60;left:50%;z-index:2;border-radius:30px;background-color:rgba(255, 255, 255, 0.26);border:0px;') Log in / Register
             nav(id='nav' style='z-index:1;display:none;')
@@ -222,7 +223,7 @@ head
                 li(class='previous')
                   a( id='login' href="#") Войти
                 li(class='next')
-                  a(href="/register") Регистрация
+                  a(id='regbutton') Регистрация
 
       
       script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
@@ -263,7 +264,6 @@ head
         console.log('checking email');
         var re = /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
         return re.test(email);} 
-
         // AUTHSUBMIT FUNCTION
         var allowauth = 1;
         function authsubmit() {
@@ -309,7 +309,87 @@ head
         //Most libraries like jQuery/Prototype/Dojo do this
         request.send("phr="+vphr+"&lgn="+vlgn);
         }
-        
+        //END OF AUTHSUBMIT FUNCTION
+        function validateEmail(email) { 
+        console.log('checking email');
+        var re = /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+        return re.test(email);}
+        // RUNREGISTER FUNCTION
+        function runregister() {
+         var errcount =0;
+      var vp =$('#p').val();
+      var vpc =$('#pc').val();
+      $('#message').empty();
+      console.log(vp.length);
+      if(vpc.length === 0 && vp.length === 0) {
+      console.log('in pass length 0');
+      //$('#message').append("<h5 style='color:#fc454e;'>Provide a password, and verify it</h5>");
+      alert('Provide a password, and verify it');
+      $('#p').empty();
+      $('#pc').empty();
+      errcount++;
+      }
+      if(vp != vpc && errcount===0) {
+      //$('#message').append("<h5 style='color:#fc454e;'>passwords don't match</h5>");
+      alert("Passwords don't match");
+      $('#p').empty();
+      $('#pc').empty();
+      errcount++;
+      }
+      
+      var vmail = $('#mail').val();
+      console.log(vmail);
+      var mailx = validateEmail(vmail);
+      if(mailx != true)
+      {
+      //$('#message').append("<h5 style='color:#fc454e;'>incorrect email</h5>");
+      alert('Incorrect email');
+      errcount++;
+      }
+      console.log('submitting now');
+      //$("#regform").submit();
+      request = new XMLHttpRequest();
+      request.onreadystatechange = function () {
+      var DONE = this.DONE || 4;
+      if (this.readyState === DONE){
+      parsed = JSON.parse(request.responseText);
+      console.log(parsed);
+      // do your job here
+      if (parsed.trouble === 1)
+      {
+      $('#message').empty();
+      switch (parsed.mtext)
+      {
+      case('fail'):
+      $('#message').append("<h5 style='color:#fc454e;'>Sorry, omething is slightly off with the DB, try again in a couple of minutes or contact support</h5>");
+      break;
+      case('email exists'):
+      $('#message').append("<h5 style='color:#fc454e;'>Provided email is already used by one of the users</h5>");
+      break;
+      
+      }
+      }
+      else { console.log('HEY');window.location = 'http://peopleandbooks.com';}
+      }
+      };
+      request.open('POST', '/newuser', true);
+      request.setRequestHeader('X-Requested-With', 'XMLHttpRequest');  // Tells server that this call is made for ajax purposes.
+      request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+      // Most libraries like jQuery/Prototype/Dojo do this
+      request.send("mail="+vmail+"&u="+username+"&p="+vp);
+        }
+        //END OF RUNREGISTER BUTTON
+        var regbuttoncount=0;
+        $('#regbutton').click(function(){
+          if(regbuttoncount===0){
+           $('#pc').slideToggle();
+           regbuttoncount++;
+          }
+          else{
+            runregister;
+            regbuttoncount--;
+          }
+          });
 
         
       
