--- a/views/index.jade
+++ b/views/index.jade
@@ -317,79 +317,79 @@ head
         // RUNREGISTER FUNCTION
         function runregister() {
          var errcount =0;
-      var vp =$('#p').val();
-      var vpc =$('#pc').val();
-      $('#message').empty();
-      console.log(vp.length);
-      if(vpc.length === 0 && vp.length === 0) {
-      console.log('in pass length 0');
-      //$('#message').append("<h5 style='color:#fc454e;'>Provide a password, and verify it</h5>");
-      alert('Provide a password, and verify it');
-      $('#p').empty();
-      $('#pc').empty();
-      errcount++;
-      }
-      if(vp != vpc && errcount===0) {
-      //$('#message').append("<h5 style='color:#fc454e;'>passwords don't match</h5>");
-      alert("Passwords don't match");
-      $('#p').empty();
-      $('#pc').empty();
-      errcount++;
-      }
-      
-      var vmail = $('#mail').val();
-      console.log(vmail);
-      var mailx = validateEmail(vmail);
-      if(mailx != true)
-      {
-      //$('#message').append("<h5 style='color:#fc454e;'>incorrect email</h5>");
-      alert('Incorrect email');
-      errcount++;
-      }
-      console.log('submitting now');
-      //$("#regform").submit();
-      request = new XMLHttpRequest();
-      request.onreadystatechange = function () {
-      var DONE = this.DONE || 4;
-      if (this.readyState === DONE){
-      parsed = JSON.parse(request.responseText);
-      console.log(parsed);
-      // do your job here
-      if (parsed.trouble === 1)
-      {
-      $('#message').empty();
-      switch (parsed.mtext)
-      {
-      case('fail'):
-      $('#message').append("<h5 style='color:#fc454e;'>Sorry, omething is slightly off with the DB, try again in a couple of minutes or contact support</h5>");
-      break;
-      case('email exists'):
-      $('#message').append("<h5 style='color:#fc454e;'>Provided email is already used by one of the users</h5>");
-      break;
-      
-      }
-      }
-      else { console.log('HEY');window.location = 'http://peopleandbooks.com';}
-      }
-      };
-      request.open('POST', '/newuser', true);
-      request.setRequestHeader('X-Requested-With', 'XMLHttpRequest');  // Tells server that this call is made for ajax purposes.
-      request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-      // Most libraries like jQuery/Prototype/Dojo do this
-      request.send("mail="+vmail+"&u="+username+"&p="+vp);
+        var vp =$('#p').val();
+        var vpc =$('#pc').val();
+        $('#message').empty();
+        console.log(vp.length);
+        if(vpc.length === 0 && vp.length === 0) {
+        console.log('pass length 0');
+        //$('#message').append("<h5 style='color:#fc454e;'>Provide a password, and verify it</h5>");
+        alert('Provide a password, and verify it');
+        $('#p').empty();
+        $('#pc').empty();
+        errcount++;
         }
-        //END OF RUNREGISTER BUTTON
-        var regbuttoncount=0;
-        $('#regbutton').click(function(){
-          if(regbuttoncount===0){
-           $('#pc').slideToggle();
-           regbuttoncount++;
+        if(vp != vpc && errcount===0) {
+        //$('#message').append("<h5 style='color:#fc454e;'>passwords don't match</h5>");
+        alert("Passwords don't match");
+        $('#p').empty();
+        $('#pc').empty();
+        errcount++;
+        }
+        
+        var vmail = $('#mail').val();
+        console.log(vmail);
+        var mailx = validateEmail(vmail);
+        if(mailx != true)
+        {
+        //$('#message').append("<h5 style='color:#fc454e;'>incorrect email</h5>");
+        alert('Incorrect email');
+        errcount++;
+        }
+        console.log('submitting now');
+        //$("#regform").submit();
+        request = new XMLHttpRequest();
+        request.onreadystatechange = function () {
+        var DONE = this.DONE || 4;
+        if (this.readyState === DONE){
+        parsed = JSON.parse(request.responseText);
+        console.log(parsed);
+        // do your job here
+        if (parsed.trouble === 1)
+        {
+        $('#message').empty();
+        switch (parsed.mtext)
+        {
+        case('fail'):
+        $('#message').append("<h5 style='color:#fc454e;'>Sorry, omething is slightly off with the DB, try again in a couple of minutes or contact support</h5>");
+        break;
+        case('email exists'):
+        $('#message').append("<h5 style='color:#fc454e;'>Provided email is already used by one of the users</h5>");
+        break;
+        
+        }
+        }
+        else { console.log('HEY');window.location = 'http://peopleandbooks.com';}
+        }
+        };
+        request.open('POST', '/newuser', true);
+        request.setRequestHeader('X-Requested-With', 'XMLHttpRequest');  // Tells server that this call is made for ajax purposes.
+        request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+        // Most libraries like jQuery/Prototype/Dojo do this
+        request.send("mail="+vmail+"&u="+username+"&p="+vp);
           }
-          else{
-            runregister;
-            regbuttoncount--;
-          }
-          });
+          //END OF RUNREGISTER BUTTON
+          var regbuttoncount=0;
+          $('#regbutton').click(function(){
+            if(regbuttoncount===0){
+             $('#pc').slideToggle();
+             regbuttoncount++;
+            }
+            else{
+              runregister;
+              regbuttoncount--;
+            }
+            });
 
         
       
