--- a/views/index.jade
+++ b/views/index.jade
@@ -214,9 +214,9 @@ head
       .row(style='text-align:center;')
         .col-xs-4.col-xs-offset-4
           input(class='form-control' type='email' style='margin-bottom:5px;' id='vlgn' name='mail' placeholder='email')
-          input(class='form-control' type='password' style='margin-bottom:20px;' id='vphr' name='p' placeholder='password')
+          input(class='form-control' type='password' style='margin-bottom:5px;' id='vphr' name='p' placeholder='password')
           input(class='form-control' type='password' style='margin-bottom:20px;display:none;' id='pc' name='p' placeholder='password confirmation')
-          #wrap(style='width:100%;')
+          #wrap(style='width:100%;margin-top:15px;')
             button(class='btn btn-primary' type='button' id='shownav' style='position:absolute;margin-left:-60;left:50%;z-index:2;border-radius:30px;background-color:rgba(255, 255, 255, 0.26);border:0px;') Log in / Register
             nav(id='nav' style='z-index:1;display:none;')
               ul(class="pager")
