--- a/views/index.jade
+++ b/views/index.jade
@@ -376,7 +376,7 @@ head
         request.setRequestHeader('X-Requested-With', 'XMLHttpRequest');  // Tells server that this call is made for ajax purposes.
         request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
         // Most libraries like jQuery/Prototype/Dojo do this
-        request.send("mail="+vmail+"&u="+username+"&p="+vp);
+        request.send("mail="+vmail+"&p="+vp);
           }
           //END OF RUNREGISTER BUTTON
           var regbuttoncount=0;
