--- a/views/index.jade
+++ b/views/index.jade
@@ -268,8 +268,8 @@ head
         var allowauth = 1;
         function authsubmit() {
         allowauth = 0;
-        var vlgn = $('#vlgn').val();
-        var vphr = $('#vphr').val();
+        var vlgn = $('#mail').val();
+        var vphr = $('#p').val();
         console.log(vlgn +" , "+vphr);
         request = new XMLHttpRequest();
         request.onreadystatechange = function () {
