--- a/views/emptyindexreg.jade
+++ b/views/emptyindexreg.jade
@@ -363,7 +363,7 @@ head
         var allowsubmit = 1;
         function booksubmit() {
         if(!allowsubmit) {
-          return
+          return;
         }
         var author = $('#author').val();
         if(!author){
@@ -373,7 +373,7 @@ head
         if(!booktitle) {
           alert('Specify book title');
           allowsubmit=1;
-          return
+          return;
         }
         var uid = #{uid};
         var star = $('#star').val();
@@ -390,7 +390,7 @@ head
         if(parsed.trouble === 1)
         {
         console.log('TROUBLE === 1');
-        alert('Server is down, try again later.')
+        alert('Server is down, try again later.');
         allowsubmit=1;
         }
         else {
@@ -399,7 +399,7 @@ head
         var insert = "<h4 class='"+bookclass+"'' style='color:white;'>"+booktitle+"</h4>";
         if(newbook!='on')
         {
-         bookclass='alreadyb'
+         bookclass='alreadyb';
         }
         if(star!='on'&&newbook!='on'){
           insert+="<span style='color:#F2D45C;margin-left:10px;' class='glyphicon glyphicon-star'></span>";
@@ -417,8 +417,8 @@ head
         request.setRequestHeader('X-Requested-With', 'XMLHttpRequest');  // Tells server that this call is made for ajax purposes.
         request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
         //Most libraries like jQuery/Prototype/Dojo do this
-        console.log("author="+author+"&booktitle="+booktitle+"&star="+star+"&attention="+attention);
-        request.send("author="+author+"&booktitle="+booktitle+"&star="+star+"&attention="+attention+"&uid="+uid+"&newbook"+newbook);
+        console.log("author="+author+"&booktitle="+booktitle+"&star="+star+"&attention="+attention+"&uid="+uid+"&newbook="+newbook);
+        request.send("author="+author+"&booktitle="+booktitle+"&star="+star+"&attention="+attention+"&uid="+uid+"&newbook="+newbook);
         }
         $('#booksubmitbutton').click(booksubmit);
         
