--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -386,22 +386,35 @@ head
         }
         else {
           $('#addbook').slideToggle();
-           $('#author').val('');
-        $('#booktitle').val('');
-        $("#checkbox").prop("newbook", false);
-        $("#checkbox").prop("star", false);
-        $("#checkbox").prop("attention", false);
+         $('#author').val('');
+          $('#booktitle').val('');
+          $("#checkbox").prop("newbook", false);
+          $("#checkbox").prop("star", false);
+          $("#checkbox").prop("attention", false);
         var bookclass = 'yet';
-        var insert = "<h4 class='"+bookclass+"'' style='color:white;'>"+booktitle;
         if(newbook!='on')
         {
          bookclass='alreadyb'
         }
+        var insert = "<h4 class='"+bookclass+"'' style='color:white;'>"+booktitle;
         if(star!='on'&&newbook!='on'){
           insert+="<span style='color:#F2D45C;margin-left:10px;' class='glyphicon glyphicon-star'></span>";
         }
         if(attention!='on'&&newbook==='on'){
           insert+="<span style='color:rgba(255, 255, 255, 0.65);margin-left:10px;' class='glyphicon glyphicon-exclamation-sign'></span>";
+        }
+        $('#welcome').fadeOut();
+        $('#booksrow').slideToggle();
+        if(newbook===1)
+        {var newbooks = parseInt($('#newbooks').text());
+              newbooks++;
+              $('#newbooks').text(newbooks);}
+        else {
+          var readbooks = parseInt($('#readbooks').text());
+              console.log(readbooks);
+              readbooks++;
+              console.log(readbooks);
+              $('#readbooks').text(readbooks);
         }
         insert+="</h4>";
         $(insert).prependTo('#bookinsert').hide().slideDown();
@@ -415,7 +428,7 @@ head
         request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
         //Most libraries like jQuery/Prototype/Dojo do this
         console.log("author="+author+"&booktitle="+booktitle+"&star="+star+"&attention="+attention);
-        request.send("author="+author+"&booktitle="+booktitle+"&star="+star+"&attention="+attention+"&uid="+uid+"&newbook"+newbook);
+        request.send("author="+author+"&booktitle="+booktitle+"&star="+star+"&attention="+attention+"&uid="+uid+"&newbook="+newbook);
         }
         $('#booksubmitbutton').click(booksubmit);
       
