--- a/views/emptymindexreg.jade
+++ b/views/emptymindexreg.jade
@@ -460,7 +460,5 @@ head
       //Most libraries like jQuery/Prototype/Dojo do this
       request.send("phr="+vphr+"&lgn="+vlgn);
       }
-      $('#booksubmitbutton').click(function(){
-        booksubmit();
-        });
+      $('#booksubmitbutton').click(booksubmit);
            
