--- a/views/emptyindexreg.jade
+++ b/views/emptyindexreg.jade
@@ -376,9 +376,27 @@ head
           return;
         }
         var uid = #{uid};
-        var star = $('#star').val();
-        var attention = $('#author').val();
-        var newbook = $('#newbook').val();
+        var star;
+        var attention;
+        var newbook;
+        if($('#star').is(':checked')){
+          star = 1;
+        }
+        else {
+          star=0;
+        }
+        if($('#attention').is(':checked')){
+          attention = 1;
+        }
+        else {
+          attention=0;
+        }
+        if($('#newbook').is(':checked')){
+          newbook = 0;
+        }
+        else {
+          newbook=1;
+        }
         allowsubmit = 0;
         request = new XMLHttpRequest();
         request.onreadystatechange = function () {
@@ -395,18 +413,37 @@ head
         }
         else {
         $('#addbook').slideToggle();
+         $('#author').val('');
+          $('#booktitle').val('');
+          $("#checkbox").prop("newbook", false);
+          $("#checkbox").prop("star", false);
+          $("#checkbox").prop("attention", false);
         var bookclass = 'yet';
-        var insert = "<h4 class='"+bookclass+"'' style='color:white;'>"+booktitle+"</h4>";
         if(newbook!='on')
         {
-         bookclass='alreadyb';
+         bookclass='alreadyb'
         }
+        var insert = "<h4 class='"+bookclass+"'' style='color:white;'>"+booktitle;
         if(star!='on'&&newbook!='on'){
           insert+="<span style='color:#F2D45C;margin-left:10px;' class='glyphicon glyphicon-star'></span>";
         }
         if(attention!='on'&&newbook==='on'){
           insert+="<span style='color:rgba(255, 255, 255, 0.65);margin-left:10px;' class='glyphicon glyphicon-exclamation-sign'></span>";
         }
+        $('#welcome').fadeOut();
+        $('#booksrow').slideToggle();
+        if(newbook===1)
+        {var newbooks = parseInt($('#newbooks').text());
+              newbooks++;
+              $('#newbooks').text(newbooks);}
+        else {
+          var readbooks = parseInt($('#readbooks').text());
+              console.log(readbooks);
+              readbooks++;
+              console.log(readbooks);
+              $('#readbooks').text(readbooks);
+        }
+        insert+="</h4>";
         $(insert).prependTo('#bookinsert').hide().slideDown();
         allowsubmit=1;
         //window.location = 'http://m.peopleandbooks.com';
