--- a/views/emptyindexreg.jade
+++ b/views/emptyindexreg.jade
@@ -228,6 +228,12 @@ head
         -moz-filter:blur(4px) brightness(0.8);
         transition:filter 1s;
       }
+      #bookinsert{
+        padding-left:20px;
+      }
+      #moviewinsert {
+        padding-left:20px;
+      }
   body
     script.
       if(screen.width < 414){
