--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -209,6 +209,12 @@ head
           outline:0px !important;
           -webkit-appearance:none;
       }
+      #bookinsert{
+        padding-left:20px;
+      }
+      #moviewinsert {
+        padding-left:20px;
+      }
   body
     script.
       if(screen.width < 414){
