--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -286,7 +286,7 @@ head
       books.forEach(function(element,index,array){
        // $('#bookinsert').append("<h4 style='color:white;'>"+element.booktitle+"</h4>");
         var popbookclass = 'yet';
-        if(newbook!=1)
+        if(element.newbook!=1)
         {
          popbookclass='alreadyb';
         }
