--- a/views/emptyindexreg.jade
+++ b/views/emptyindexreg.jade
@@ -229,10 +229,10 @@ head
         transition:filter 1s;
       }
       #bookinsert{
-        padding-left:20px;
+        padding-left:40px;
       }
       #moviewinsert {
-        padding-left:20px;
+        padding-left:40px;
       }
   body
     script.
@@ -427,13 +427,13 @@ head
         var bookclass = 'yet';
         if(newbook!='on')
         {
-         bookclass='alreadyb'
+         bookclass='alreadyb';
         }
-        var insert = "<h4 class='"+bookclass+"'' style='color:white;'>"+booktitle;
-        if(star!='on'&&newbook!='on'){
+        var insert = "<h4 class='"+bookclass+"' style='color:white;'>"+booktitle;
+        if(star===1&&newbook===0){
           insert+="<span style='color:#F2D45C;margin-left:10px;' class='glyphicon glyphicon-star'></span>";
         }
-        if(attention!='on'&&newbook==='on'){
+        if(attention===1&&newbook===1){
           insert+="<span style='color:rgba(255, 255, 255, 0.65);margin-left:10px;' class='glyphicon glyphicon-exclamation-sign'></span>";
         }
         $('#welcome').fadeOut();
