--- a/views/emptymindexreg.jade
+++ b/views/emptymindexreg.jade
@@ -391,9 +391,9 @@ head
       $('#addbook').slideToggle();
        $('#author').val('');
         $('#booktitle').val('');
-        $("#checkbox").prop("newbook", false);
-        $("#checkbox").prop("star", false);
-        $("#checkbox").prop("attention", false);
+        $("#newbook").prop("newbook", false);
+        $("#star").prop("star", false);
+        $("#attention").prop("attention", false);
       var bookclass = 'yet';
       if(newbook===0)
       {
