--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -191,7 +191,7 @@ head
       color:rgba(0, 0, 0, 0.27);
       }
       .alreadym{
-      color:rgba(255, 255, 255, 0.21);
+      color:rgba(255, 255, 255, 0.3);
       }
       .leftPaddingExtended{
         padding-left:30px;
@@ -236,7 +236,7 @@ head
       span(class='glyphicon glyphicon-align-justify' id='showLeft' style='color:#333;font-size:30px;margin-top:20px;')
     .container(style='padding-left:84px;width:100% !important;padding-right:none;')  
       #heightcheck.row
-        .col-xs-6(id='books' style='background-color:rgba(108, 166, 149, 1);height:100%;overflow:auto;')
+        .col-xs-6(id='books' style='background-color:#52CA8F;height:100%;overflow:auto;')
           .row
             .col-xs-12(style='text-align:center;')
               h1(style='font-family:high;font-size:200px;font-weight:bold;color:white;') #{newbooks} 
@@ -270,7 +270,7 @@ head
                     a( class='addbookbutton' style='background-color:#999;') Close
           .row
             #bookinsert.col-xs-12
-        .col-xs-6(id='movies' style='background-color:rgba(0, 0, 0, 0.1);height:100%;overflow:auto;')
+        .col-xs-6(id='movies' style='background-color:#FAB142;height:100%;overflow:auto;')
           .row
             .col-xs-12(style='text-align:center;')
               h1(style='font-family:high;font-size:200px;font-weight:bold;color:white;') #{newmovies} 
