--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -258,10 +258,12 @@ head
                 label
                   input(type="checkbox" id='star') 
                   span(class='glyphicon glyphicon-star' style='color:#F2D45C;margin-left:10px;')
+                  | Книга понравилась
               .checkbox
                 label
                   input(type="checkbox" id='attention') 
                   span(class='glyphicon glyphicon-exclamation-sign' style='color:rgba(255, 255, 255, 0.65);margin-left:10px;')
+                  | Прочитать скорее
               nav
                 ul(class="pager")
                   li(class="previous")
